--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ datastorePreferences = "1.1.3"
 room = "2.6.1"
 ksp = "2.0.0-1.0.24"
 coreSplashscreen = "1.0.1"
+firebaseFirestoreKtx = "25.1.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +38,7 @@ firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version.
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-bom-v3280 = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
 firebase-bom-v33110 = { module = "com.google.firebase:firebase-bom", version.ref = "googleFirebaseBom" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
 gms-play-services-auth = { module = "com.google.android.gms:play-services-auth" }
 google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
 google-googleid = { module = "com.google.android.libraries.identity.googleid:googleid" }
@@ -65,6 +67,7 @@ androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscree
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
