--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "<version>"
 agp = "8.7.3"
 androidxCredentials = "<latest version>"
 credentialsPlayServicesAuth = "1.5.0"
@@ -17,7 +18,9 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.02.00"
+mapsCompose = "1.0.0"
 navigation = "2.8.8"
+playServicesMaps = "19.1.0"
 serialization = "1.6.3"
 runtimeLivedata = "1.7.8"
 datastorePreferences = "1.1.3"
@@ -25,8 +28,10 @@ room = "2.6.1"
 ksp = "2.0.0-1.0.24"
 coreSplashscreen = "1.0.1"
 firebaseFirestoreKtx = "25.1.3"
+playServicesLocation = "21.3.0"
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentialsPlayServicesAuth" }
 androidx-credentials-credentials-vlatestversion = { module = "androidx.credentials:credentials", version.ref = "androidxCredentials" }
@@ -66,9 +71,12 @@ androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = 
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 play-services = { module = "com.google.android.gms:play-services" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
