NuevaRutaConPermisos super mejorada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/apimakey" />
+            android:value="@string/mapssdkkey" />
     </application>
 
 </manifest>
