--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ firebaseBomVersion = "32.8.0"
 googleFirebaseBom = "33.11.0"
 googleid = "1.1.1"
 googleidVersion = "<latest version>"
+googleMapsServices = "2.3.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -20,6 +21,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.02.00"
 mapsCompose = "1.0.0"
 navigation = "2.8.8"
+okhttp = "4.12.0"
 playServicesMaps = "19.1.0"
 serialization = "1.6.3"
 runtimeLivedata = "1.7.8"
@@ -47,6 +49,7 @@ firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
 gms-play-services-auth = { module = "com.google.android.gms:play-services-auth" }
 google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
 google-googleid = { module = "com.google.android.libraries.identity.googleid:googleid" }
+google-maps-services = { module = "com.google.maps:google-maps-services", version.ref = "googleMapsServices" }
 googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 googleid-vlatestversion = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleidVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -72,6 +75,7 @@ androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscree
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 play-services = { module = "com.google.android.gms:play-services" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
